# pypeek

./: .gitignore  LICENSE  README.md  peek.spec  pypeek-mac.spec  pypeek-onefile.spec  pypeek-win.spec  pypeek.spec  pyproject.toml  req.txt  requirements.txt
asset/art/: pypeek-icon.xcf
asset/data/: build.txt
asset/data/win/: install.iss
data/: build.txt  inno.iss  install.iss
data/art/: desc.txt  screenshots-mac.xcf  screenshots.xcf
data/installer/win/: install.iss
data/setup/win/: install.iss
data/win/: install.iss
docs/: index.md
src/: deploy.py  run.py  test.py
src/peekplus/: __main__.py
src/pypeek/: __init__.py  __main__.py  crop.py  drawover.py  ffmpeg.py  main.py  qrangeslider.py  shortcut.py  undo.py
src/pypeek/icon/: peek.icns
src/pypeek/static_ffmpeg/: __init__.py  run.py
src/static_ffmpeg/: add_paths.py
tests/: test.py
