[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypeek"
version = "2.4.0"
description = "An animated GIF recorder"
authors = [
  { name="Firat Kiral", email="firatkiral@gmail.com" },
]
keywords = [
  "recorder",
  "screenshot",
  "video",
  "screen",
  "capture",
  "record",
  "animation",
  "gif",
  "mp4",
  "webm",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6 ~= 6.4.0",
    "static-ffmpeg ~= 2.3",
]

[project.scripts]
pypeek-cli = "pypeek:run"
pypeek-shortcut = "pypeek.shortcut:main"

[project.gui-scripts]
pypeek = "pypeek:run"

[project.urls]
"Homepage" = "https://github.com/firatkiral/pypeek"
"Bug Tracker" = "https://github.com/firatkiral/pypeek/issues"
